--- a/index.css
+++ b/index.css
@@ -8,13 +8,14 @@
 #userDetails button {
     background-color: #00bcd4; /* Match the login button */
     color: white;
-    font-size: 1.2em;
+    font-size: 1em;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     transition: background 0.3s;
+    margin-right: 35px;
 }
 
 #userDetails button:hover {
